Fixed some whitespace and links

--- a/firstpagestyle.css
+++ b/firstpagestyle.css
@@ -70,7 +70,7 @@
     position: relative;
     left: 20px;
     top: -60px;
-    width: 100%;
+    width: 80%;
     /* Title */
     font-family: 'Sulphur Point';
     font-style: normal;
@@ -103,7 +103,7 @@
   
   .socialbottombar {
     position: relative;
-    width: 100%;
+    width: 10%;
     height: 15px;
     top: 20px;
     display: block;
